--- a/posts/00-hello-world/hello-world.mdx
+++ b/posts/00-hello-world/hello-world.mdx
@@ -2,6 +2,9 @@
 title: Hello world!
 slug: hello-world
 author: Maureen Holland
+image: ./images/felix-lannoo-post-1.jpg
 ---
+
+![Check out this markdown image](./images/felix-lannoo-post-1.jpg)
 
 Blog post test with MDX and front-matter
