--- a/posts/01-another/another.mdx
+++ b/posts/01-another/another.mdx
@@ -2,6 +2,9 @@
 title: Another!
 slug: another
 author: Maureen Holland
+image: ./images/jennifer-chen-post-2.jpg
 ---
+
+![Check out this markdown image](./images/jennifer-chen-post-2.jpg)
 
 Another blog post test with MDX and front-matter
